--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -27,3 +27,12 @@
 .list code {
   background: #f7f7f7;
 }
+
+.content {
+  width: 100%;
+  height: 100%;
+}
+
+.topButton {
+  margin-bottom: 20px;
+}
